reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__projections.rs_line_1202_col_5.log

*** crates/tracewake-core/src/projections.rs:1202:5: replace with_validator_availability -> SemanticActionEntry with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/projections.rs
+++ replace with_validator_availability -> SemanticActionEntry with Default::default()
@@ -1194,85 +1194,17 @@
 
     actions
 }
 
 fn with_validator_availability(
     entry: SemanticActionEntry,
     preflight: &SemanticActionPreflightContext<'_>,
 ) -> SemanticActionEntry {
-    let proposal = proposal_from_semantic_action_entry(
-        ProposalId::new(format!(
-            "proposal.preflight.{}",
-            entry.semantic_action_id.as_str()
-        ))
-        .unwrap(),
-        ProposalOrigin::Test,
-        Some(preflight.viewer_actor_id.clone()),
-        preflight.sim_tick,
-        &entry,
-        None,
-        None,
-    );
-    let ordering_key = OrderingKey::new(
-        preflight.sim_tick,
-        SchedulePhase::HumanCommand,
-        SchedulerSourceId::Actor(preflight.viewer_actor_id.clone()),
-        ProposalSequence::new(0),
-        proposal.action_id.clone(),
-        proposal.target_ids.clone(),
-        proposal.proposal_id.as_str().to_string(),
-    );
-    let report = validate_proposal(
-        ProposalValidationContext {
-            registry: preflight.registry,
-            state: preflight.state,
-            agent_state: preflight.agent_state,
-            controller_bindings: None,
-            epistemic_projection: None,
-            content_manifest_id: preflight.content_manifest_id,
-            ordering_key: &ordering_key,
-            current_event_frontier: preflight.knowledge_context_frontier,
-        },
-        &proposal,
-    );
-    let enabled = report.status == ReportStatus::Accepted;
-    let availability = if enabled {
-        ActionAvailability::available()
-    } else {
-        let mut provenance_refs = vec![
-            ActionAvailabilityProvenance::new(
-                ActionAvailabilityProvenanceKind::HolderKnownContext,
-                preflight.knowledge_context_id.as_str(),
-            ),
-            ActionAvailabilityProvenance::new(
-                ActionAvailabilityProvenanceKind::ValidationReport,
-                report.validation_report_id.as_str(),
-            ),
-        ];
-        provenance_refs.extend(report.actor_visible_facts.iter().map(|fact| {
-            ActionAvailabilityProvenance::new(
-                ActionAvailabilityProvenanceKind::ValidatorFact,
-                fact.render_pair(),
-            )
-        }));
-        ActionAvailability::disabled(
-            report.reason_codes.clone(),
-            report.actor_visible_summary,
-            provenance_refs,
-            Vec::new(),
-        )
-    };
-    SemanticActionEntry::with_availability(
-        entry.semantic_action_id,
-        entry.action_id,
-        entry.target_ids,
-        entry.label,
-        availability,
-    )
+    Default::default() /* ~ changed by cargo-mutants ~ */
 }
 
 pub fn proposal_from_semantic_action_entry(
     proposal_id: ProposalId,
     origin: ProposalOrigin,
     actor_id: Option<ActorId>,
     requested_tick: SimTick,
     entry: &SemanticActionEntry,


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): couldn't read metadata for file `target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
warning: unused imports: `ProposalValidationContext`, `ReportStatus`, and `validate_proposal`
 --> crates/tracewake-core/src/projections.rs:2:5
  |
2 |     validate_proposal, ActionRegistry, Proposal, ProposalOrigin, ProposalSource,
  |     ^^^^^^^^^^^^^^^^^
3 |     ProposalSourceContext, ProposalValidationContext, ReasonCode, ReportStatus, ValidationReport,
  |                            ^^^^^^^^^^^^^^^^^^^^^^^^^              ^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `OrderingKey`, `ProposalSequence`, `SchedulePhase`, and `SchedulerSourceId`
  --> crates/tracewake-core/src/projections.rs:21:24
   |
21 | use crate::scheduler::{OrderingKey, ProposalSequence, SchedulePhase, SchedulerSourceId};
   |                        ^^^^^^^^^^^  ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `SemanticActionEntry: Default` is not satisfied
    --> crates/tracewake-core/src/projections.rs:1202:5
     |
1202 |     Default::default() /* ~ changed by cargo-mutants ~ */
     |     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `SemanticActionEntry`
    --> crates/tracewake-core/src/view_models.rs:202:1
     |
 202 | pub struct SemanticActionEntry {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
warning: `tracewake-core` (lib) generated 2 warnings
error: could not compile `tracewake-core` (lib) due to 1 previous error; 2 warnings emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `view_models::SemanticActionEntry: Default` is not satisfied
    --> crates/tracewake-core/src/projections.rs:1202:5
     |
1202 |     Default::default() /* ~ changed by cargo-mutants ~ */
     |     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
     |
help: the trait `Default` is not implemented for `view_models::SemanticActionEntry`
    --> crates/tracewake-core/src/view_models.rs:202:1
     |
 202 | pub struct SemanticActionEntry {
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: `tracewake-core` (lib test) generated 1 warning (1 duplicate)
error: could not compile `tracewake-core` (lib test) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
